Spacing issue fixed

--- a/src/pdp/components/ProductDetailsWithEachReview.css
+++ b/src/pdp/components/ProductDetailsWithEachReview.css
@@ -125,3 +125,11 @@
 	vertical-align: sub;
 	margin-right: 8px;
 }
+
+.reviewHeadingInitial {
+    margin: 20px 0;
+    font-family: semibold;
+    font-size: 14px;
+    color: #212121;
+    letter-spacing: 0;
+}
